--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body{
 
 	text-align:center;
 	font-family:Didot, serif;
-	background-color:white;
+background-image: url("./runshoe.jpg.png");
 background-size: cover;
 
 
@@ -28,7 +28,8 @@ div.b {
 
 img{
 float:left;
-padding:11px 0;
+padding:15px;
+margin-left:50px;
 }
 
 .container{
@@ -36,9 +37,7 @@ width:80%;
 margin: 0 auto;
 }
 
-nav{
-float:right;
-}
+
 
 header::after{
 content:'';
@@ -46,17 +45,17 @@ display:table;
 clear:both;
 }
 
-nav ul {
+nav ul{
 margin:0;
 padding:0;
 list-style:none;
 }
 
 nav li{
+float:right;
 display: inline-block;
-margin-left:70px;
+margin-right:80px;
 padding-top:42px;
-
 position:relative;
 }
 
@@ -86,6 +85,11 @@ nav a:hover::before{
 width:100%;
 }
 
+
+nav a:hover::before{
+width:100%;
+}
+
 #title{
 font-family:Optima, sans-serif;
 font-size:8.3em;
@@ -108,7 +112,7 @@ margin-bottom:10px;
 opacity: 0.775;
 }
 
-#SetGoals{
+.SetGoals{
 font-family:Optima, sans-serif;
 font-size:4em;
 font-weight:800;
@@ -118,13 +122,6 @@ color:transparent;
 background-image:url(https://media.giphy.com/media/fUvfA0iLgy8qCGuvF2/giphy.gif);
 background-position:center;
 -webkit-background-clip:text;
-}
-
-.boxed1{
-background-color:#aa6dde;
-border:0;
-margin-top:10px;
-opacity: 0.775;
 }
 
 .button {
@@ -180,7 +177,7 @@ margin-left:640px;
 margin-right:640px;
 top:50%;
 left:50%;
-transform:translateX(-600px)translateY(-0px);
+transform:translateX(-600px)translateY(135px);
 border-style:solid;
 }
 
@@ -193,7 +190,7 @@ margin-left:640px;
 margin-right:640px;
 top:50%;
 left:50%;
-transform:translateX(-400px)translateY(-115px);
+transform:translateX(-400px)translateY(-0px);
 border-style:solid;
 }
 
@@ -212,10 +209,10 @@ opacity:100%;
 
 #img1{
 top:50%;
-transform:translateX(10px) translateY(-100px);
+transform:translateX(10px) translateY(100px);
 }
 
-#PlanRuns{
+.PlanRuns{
 font-family:Optima, sans-serif;
 font-size:4em;
 font-weight:800;
@@ -246,7 +243,7 @@ margin-left:640px;
 margin-right:640px;
 top:50%;
 left:50%;
-transform:translateX(-200px)translateY(-232px);
+transform:translateX(-200px)translateY(-136px);
 border-style:solid;
 }
 
@@ -259,7 +256,7 @@ margin-left:640px;
 margin-right:640px;
 top:50%;
 left:50%;
-transform:translateX(0px)translateY(-348px);
+transform:translateX(0px)translateY(-272px);
 border-style:solid;
 }
 
@@ -360,7 +357,7 @@ margin-left:640px;
 margin-right:640px;
 top:50%;
 left:50%;
-transform:translateX(200px)translateY(-465px);
+transform:translateX(200px)translateY(-408px);
 border-style:solid;
 }
 
@@ -373,7 +370,7 @@ margin-left:640px;
 margin-right:640px;
 top:50%;
 left:50%;
-transform:translateX(400px)translateY(-581px);
+transform:translateX(400px)translateY(-543px);
 border-style:solid;
 }
 
@@ -400,13 +397,30 @@ font-weight:920;
 
 .boxed11{
 background-color:#ccecff;
-padding-top:50px;
-padding-bottom:50px;
-margin-top:-100px;
+margin-top:10px;
 margin-bottom:10px;
-margin-left:10px;
-margin-right:10px;
+padding-bottom:10px;
 top:50%;
 left:50%;
-opacity:100%;
+opacity:0.775;
+}
+
+.boxed12{
+  background-color:#ccecff;
+margin-top:10px;
+margin-bottom:10px;
+top:50%;
+left:50%;
+opacity:0.775;
+padding-bottom: 10px;
+}
+
+.boxed13{
+background-color:#ccecff;
+padding-bottom:20px;
+margin-top:10px;
+top:50%;
+left:50%;
+opacity:0.775;
+padding-bottom: 10px;
 }
