--- a/stylesheet.css
+++ b/stylesheet.css
@@ -257,7 +257,7 @@ opacity:0.775;
 }
 
 .boxed12{
-  background-color:#ccecff;
+  background-color:#aa6dde;
 margin-top:10px;
 margin-bottom:10px;
 top:50%;
@@ -267,7 +267,7 @@ padding-bottom: 10px;
 }
 
 .boxed13{
-background-color:#ccecff;
+background-color:#aa6dde;
 padding-bottom:20px;
 margin-top:10px;
 top:50%;
